# bookstore

./: .dockerfile  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: workflow-pr.yml
bookstore/: settings.py  urls.py
bookstore/templates/: hello_world.html
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
